--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslambda",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "zero dependencies functional programming utilites for javascript",
   "main": "dist/eslambda.js",
   "scripts": {
@@ -8,11 +8,11 @@
     "prettier": "prettier src/**/*.js",
     "lint:fix": "eslint src --ext .js -c .eslintrc --fix",
     "test": "jest --watch --maxWorkers=25%",
-    "test:cli": "jest --maxWorkers=50%",
+    "test:ci": "jest --collect-coverage --maxWorkers=50%",
     "build:es": "BABEL_ENV=es babel src/index.js -o dist/eslambda.es.js",
     "build:cjs": "BABEL_ENV=cjs babel src/index.js -o dist/eslambda.js",
     "build": "npm run build:es && npm run build:cjs",
-    "clean": "rimraf dist/*",
+    "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "files": [
