--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "lint:fix": "eslint src --ext .js -c .eslintrc --fix",
     "test": "jest --watch --maxWorkers=25%",
     "test:ci": "jest --collect-coverage --maxWorkers=50%",
-    "build:es": "BABEL_ENV=es babel src/index.js -o dist/eslambda.es.js",
-    "build:cjs": "BABEL_ENV=cjs babel src/index.js -o dist/eslambda.js",
+    "build:es": "BABEL_ENV=es babel src/*.js -d",
+    "build:cjs": "BABEL_ENV=cjs babel src/*.js -d cjs",
     "build": "npm run build:es && npm run build:cjs",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist cjs",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "files": [
