--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint src --ext .js -c .eslintrc",
     "prettier": "prettier src/**/*.js",
     "lint:fix": "eslint src --ext .js -c .eslintrc --fix",
-    "test": "jest --watch --maxWorkers=25%",
-    "test:ci": "jest --collect-coverage --maxWorkers=50%",
+    "test": "jest --watch --silent",
+    "test:ci": "jest --collect-coverage",
     "build:es": "BABEL_ENV=es babel src/*.js -d",
     "build:cjs": "BABEL_ENV=cjs babel src/*.js -d cjs",
     "build": "npm run build:es && npm run build:cjs",
