--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eslambda",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "zero dependencies functional programming utilites for javascript",
-  "main": "dist/eslambda.js",
+  "main": "dist",
   "repository": {
     "type": "git",
     "url": "git://github.com/Akallabet/eslambda.git"
@@ -13,9 +13,8 @@
     "lint:fix": "eslint src --ext .js -c .eslintrc --fix",
     "test": "jest --watch --silent",
     "test:ci": "jest --collect-coverage",
-    "build:es": "BABEL_ENV=es babel src/*.js -d",
-    "build:cjs": "BABEL_ENV=cjs babel src/*.js -d cjs",
-    "build": "npm run build:es && npm run build:cjs",
+    "build:es": "BABEL_ENV=es babel src/*.js -d dist",
+    "build": "npm run build:es",
     "clean": "rimraf dist cjs",
     "prepublishOnly": "npm run clean && npm run build"
   },
