--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src --ext .js -c .eslintrc",
     "prettier": "prettier src/**/*.js",
     "lint:fix": "eslint src --ext .js -c .eslintrc --fix",
-    "test": "jest --watch --silent",
+    "test": "jest --watch",
     "test:ci": "jest --collect-coverage",
     "build:es": "BABEL_ENV=es babel src/*.js -d dist",
     "build": "npm run build:es",
